--- a/site/static/index.html
+++ b/site/static/index.html
@@ -19,5 +19,7 @@ Here be системы
 </section>
 <input id="chat" placeholder="чят" type="text">
 <button id="chatSend">послать</button>
+<div id="chatWindow">
+</div>
 </body>
 </html>
