--- a/site/static/index.html
+++ b/site/static/index.html
@@ -16,7 +16,9 @@
 				Система технического мониторинга
 			</a>
 			<div class="system-inner techSystem-inner">
+				<div class="techSystems">
 
+				</div>
 				<a href="#" class="systemClose">
 					Закрыть
 				</a>
