--- a/site/static/index.html
+++ b/site/static/index.html
@@ -42,4 +42,7 @@
 		<div id="chatWindow"></div>
 	</div>
 </body>
+<audio id="siren">
+	<source src="sounds/siren.mp3" type="audio/mpeg">
+</audio>
 </html>
