--- a/site/static/index.html
+++ b/site/static/index.html
@@ -39,13 +39,13 @@
 		</div>
 	</div>
 	<div class="chat">
-		<input id="chat" placeholder="чят" type="text">
+		<textarea id="chat" placeholder="чят" type="text"></textarea>
 		<button id="chatSend">послать</button>
 		<div id="chatWindow"></div>
 	</div>
 </body>
 <audio id="siren">
-	<source src="sounds/siren.mp3" type="audio/mpeg">
+	<source src="sounds/siren.mp3" type="audio/mpeg" loop>
 </audio>
 
 <div class="techgame">
