ver. 0.8 add anabioz module (work)

--- a/site/static/index.html
+++ b/site/static/index.html
@@ -7,7 +7,9 @@
 	<script src="knockout-3.3.0.js" type="text/javascript"></script>
 	<script src="eisenstein.js" type="text/javascript"></script>
 	<script src="medical/js/script.js" type="text/javascript"></script>	
+	<script src="anabioz/js/script.js" type="text/javascript"></script>		
 	<link href="medical/css/style.css" rel="stylesheet">	
+	<link href="anabioz/css/style.css" rel="stylesheet">		
 	<link href="css/2048.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 
@@ -73,6 +75,56 @@
 				</a>
 			</div>
 		</div>
+
+		<div id="anabioz" class="system-container anabiozSystem-container">
+			<a href="#" class="systemOpener anabiozhSystem-opener">
+				Система контроля гибернации
+			</a>
+			<div class="system-inner anabiozSystem-inner">
+				<div class="anabiozSystems">
+					<div class="wrap">
+						<h1>Центр контроля состояния мороженых</h1>
+						<div class="inner">
+							<form action="" method="post" class="form-anabioz">
+								<div class="wrap-line">
+									<input type="text" placeholder="№ мороженого" name="id">
+									<button class="all-freezes" data-search="id">Получить по номеру</button>
+								</div>
+								<div class="wrap-line">			
+									<input type="text" placeholder="Имя мороженого" name="name">
+									<button class="all-freezes" data-search="name">Получить по имени</button>								
+								</div>
+								<div class="wrap-line">			
+									<input type="text" placeholder="Возраст мороженого" name="age" >
+									<button class="all-freezes" data-search="age">Получить по возрасту</button>								
+								</div>
+								<div class="wrap-line">
+									<label for="sex">
+										<input type="radio" placeholder="Возраст мороженого" name="sex" value="male" checked>Мужчина
+										<input type="radio" placeholder="Возраст мороженого" name="sex" value="female">Женщина				
+									</label>	
+									<button class="all-freezes-sex" data-search="sex">Получить по полу</button>								
+								</div>
+								<div class="wrap-line">			
+									<input type="text" placeholder="Профессия мороженого" name="bsn">
+									<button class="all-freezes" data-search="bsn">Получить по профессии</button>								
+								</div>								
+								<div class="wrap-line">			
+									<input type="text" placeholder="Личный код мороженого" name="code">
+									<button class="all-freezes" data-search="code">Получить по личному коду</button>								
+								</div>												
+								<input type="submit" value="Получить все данные" style="width: 100%;">
+							</form>
+						</div>	
+						<div class="single-freeze"></div>
+					</div>
+				</div>
+				<a href="#" class="systemClose">
+					Закрыть
+				</a>
+			</div>
+		</div>
+
 	</div>
 	<div class="chat">
 		<textarea id="chat" placeholder="чят" type="text"></textarea>
