--- a/site/static/index.html
+++ b/site/static/index.html
@@ -124,6 +124,28 @@
 				</a>
 			</div>
 		</div>
+		<div id="medJournal" class="system-container medJournalSystem-container">
+			<a href="#" class="systemOpener medJournalSystem-opener">
+				Медицинский журнал
+			</a>
+			<div class="system-inner medJournal-inner">
+				<div class="medJournal">
+
+				</div>
+				<div class="medJournal-addNewEntry" style="border-top:2px solid #000000;">
+					<h4 style="margin: 0 5px;">Добавить запись</h4>
+					<br>
+					<input placeholder="Тема" class="medJournal-topic">
+					<br>
+					<textarea placeholder="Содержимое" class="medJournal-entry"></textarea>
+					<br>
+					<button class="medJournal-entrySend">Отправить</button>
+				</div>
+				<a href="#" class="systemClose">
+					Закрыть
+				</a>
+			</div>
+		</div>
 
 	</div>
 	<div class="chat">
