--- a/site/static/index.html
+++ b/site/static/index.html
@@ -129,17 +129,18 @@
 				Медицинский журнал
 			</a>
 			<div class="system-inner medJournal-inner">
-				<div class="medJournal">
 
-				</div>
-				<div class="medJournal-addNewEntry" style="border-top:2px solid #000000;">
+				<div class="medJournal-addNewEntry" style="border-bottom:2px solid #000000;padding-bottom:5px;margin-bottom: 5px;">
 					<h4 style="margin: 0 5px;">Добавить запись</h4>
 					<br>
 					<input placeholder="Тема" class="medJournal-topic">
 					<br>
-					<textarea placeholder="Содержимое" class="medJournal-entry"></textarea>
+					<textarea placeholder="Содержимое" class="medJournal-entry" style="width:80%"></textarea>
 					<br>
 					<button class="medJournal-entrySend">Отправить</button>
+				</div>
+				<div class="medJournal">
+
 				</div>
 				<a href="#" class="systemClose">
 					Закрыть
