v.1.2a anabioz module refined - aaded new names

--- a/site/static/index.html
+++ b/site/static/index.html
@@ -84,34 +84,34 @@
 			<div class="system-inner anabiozSystem-inner">
 				<div class="anabiozSystems">
 					<div class="wrap">
-						<h1>Центр контроля состояния мороженых</h1>
+						<h1>Центр контроля гибернации</h1>
 						<div class="inner">
 							<form action="" method="post" class="form-anabioz">
 								<div class="wrap-line">
-									<input type="text" placeholder="№ мороженого" name="id">
+									<input type="text" placeholder="№ пассажира" name="id">
 									<button class="all-freezes" data-search="id">Получить по номеру</button>
 								</div>
 								<div class="wrap-line">			
-									<input type="text" placeholder="Имя мороженого" name="name">
+									<input type="text" placeholder="Имя пассажира" name="name">
 									<button class="all-freezes" data-search="name">Получить по имени</button>								
 								</div>
 								<div class="wrap-line">			
-									<input type="text" placeholder="Возраст мороженого" name="age" >
+									<input type="text" placeholder="Возраст пассажира" name="age" >
 									<button class="all-freezes" data-search="age">Получить по возрасту</button>								
 								</div>
 								<div class="wrap-line">
 									<label for="sex">
-										<input type="radio" placeholder="Возраст мороженого" name="sex" value="male" checked>Мужчина
-										<input type="radio" placeholder="Возраст мороженого" name="sex" value="female">Женщина				
+										<input type="radio" placeholder="Возраст пассажира" name="sex" value="male" checked>Мужчина
+										<input type="radio" placeholder="Возраст пассажира" name="sex" value="female">Женщина				
 									</label>	
 									<button class="all-freezes-sex" data-search="sex">Получить по полу</button>								
 								</div>
 								<div class="wrap-line">			
-									<input type="text" placeholder="Профессия мороженого" name="bsn">
+									<input type="text" placeholder="Профессия пассажира" name="bsn">
 									<button class="all-freezes" data-search="bsn">Получить по профессии</button>								
 								</div>								
 								<div class="wrap-line">			
-									<input type="text" placeholder="Личный код мороженого" name="code">
+									<input type="text" placeholder="Личный код пассажира" name="code">
 									<button class="all-freezes" data-search="code">Получить по личному коду</button>								
 								</div>												
 								<input type="submit" value="Получить все данные" style="width: 100%;">
